<resources>
    <string name="app_name">MusicHunter</string>
    <string name="search">search</string>
    <string name="searching">searching…</string>
    <string name="result">Result</string>
    <string name="song_info">Song Information</string>
    <string name="play_song">Play</string>
    <string name="song_title">Title:</string>
    <string name="song_artist">Artist:</string>
    <string name="song_album">Album:</string>
    <string name="ogg_download">Download OGG</string>
    <string name="mp3_download">Download MP3</string>
    <string name="mp3_low_download">Download Low MP3</string>
    <string name="download">Download</string>
    <string name="error">Error</string>
    <string name="add_to_download_enqueue">Add to Download list</string>
    <string name="download_success">Download Succeed</string>
    <string name="download_complete">Download Complete</string>
    <string name="download_failed">Download Failed</string>
    <string name="input">Input song name/artist…</string>
    <string name="input_null">Input can\'t be null!</string>
    <string name="about">About</string>
    <string name="donate">Donate</string>
    <string name="contact_me">Chat in group</string>
    <string name="check_qq_installed">Check if QQ is installed</string>
    <string name="check_alipay_installed">Check if Alipay is installed</string>
    <string name="check_coolapk_installed">Check if Coolapk market is installed</string>
    <string name="rate">Rate this app</string>
    <string name="about_app">本软件仅供交流学习使用，不可用于商业用途，请于下载后24小时内删除！</string>
    <string name="pages">pages</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="wait_image_ready">Please wait for album Art load complete</string>
    <string name="download_album_art">Download AlbumArt</string>
    <string name="ogg_size">Ogg Size:</string>
    <string name="mp3_size">Mp3 Size:</string>
    <string name="mp3_low_size">Low Mp3 Size:</string>
    <string name="no_recourse">No Recourse</string>
</resources>
